Fixing spacing and line breaks in grammar page and also adding some explanatory text

--- a/cta_refinement/static/css/main.css
+++ b/cta_refinement/static/css/main.css
@@ -70,3 +70,11 @@ body {
   padding: 13px;
   width: 250px;
 }
+
+.warning {
+  border-radius:6px;
+  border-color: rgb(161, 0, 0);
+  background-color: rgb(250, 133, 122);
+  color: rgb(161, 0, 0);
+  padding: 20px;
+}
